# my_AlphaGPT

./: .env.example  .gitignore  MY_COMMENT.MD  README.md  config.yaml.example  example.py  pyproject.toml  requirements.txt
.claude/: settings.json
src/alphagpt/: __init__.py  main.py
src/alphagpt/api/: __init__.py  deepseek_client.py
src/alphagpt/backtest/: __init__.py  engine.py
src/alphagpt/config/: __init__.py  settings.py
src/alphagpt/data/: __init__.py  features.py  loader.py
src/alphagpt/factor/: __init__.py  calculator.py  generator_deepseek.py  operators.py
src/alphagpt/utils/: __init__.py  constants.py  env_loader.py  exceptions.py  logger.py  output.py  seed.py  validators.py
src/alphagpt/visualization/: __init__.py  plotter.py
