[project]
name = "alphagpt"
version = "2.0.0"
description = "AlphaGPT 量化因子生成与回测系统 (Tushare)"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "requests>=2.26.0",
    "tushare>=1.2.89",
    "pyyaml>=6.0",
    "openai>=1.0.0",
    "numexpr>=2.8.0",
    "scipy>=1.13.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[project.scripts]
alphagpt = "alphagpt.main:main"
